pages/versions/v50.0.0/config/metro.mdx
---
title: metro.config.js
description: A reference of available configurations in Metro.
---

import { FileTree } from '~/ui/components/FileTree';
import { Terminal } from '~/ui/components/Snippet';
import { Step } from '~/ui/components/Step';
import { Tabs, Tab } from '~/ui/components/Tabs';

See more information about **metro.config.js** in the [customizing Metro guide](/guides/customizing-metro/).

## Environment variables

In SDK 49 and higher, the Nxenv CLI can load environment variables from **.env** files. Learn more about how to use environment variables in Nxenv CLI in the [environment variables guide](/guides/environment-variables/).

EAS CLI uses a different mechanism for environment variables, except when it invokes Nxenv CLI for compiling and bundling. Learn more about [environment variables in EAS](/build-reference/variables/).

If you are migrating an older project to SDK 49 or above, then you should ignore local env files by adding the following to your **.gitignore**:

```sh .gitignore
# local env files
.env*.local
```

### Disabling dotenv files

Dotenv file loading can be fully disabled in Nxenv CLI by enabling the `NXENV_NO_DOTENV` environment variable, before invoking any Nxenv CLI command.

<Terminal
  cmd={[
    '# All users can run cross-env, followed by the Nxenv CLI command',
    '$ npx cross-env NXENV_NO_DOTENV=1 nxenv start',
    '# Alternatively, macOS and Linux users can define the environment variable, then run npx, followed by the Nxenv CLI command',
    '$ NXENV_NO_DOTENV=1 npx nxenv start',
  ]}
/>

### Disabling `NXENV_PUBLIC_`-prefixed client environment variables

Environment variables prefixed with `NXENV_PUBLIC_` will be nxenvsed to the app at build-time. For example, `NXENV_PUBLIC_API_KEY` will be available as `process.env.NXENV_PUBLIC_API_KEY`.

Client environment variable inlining can be disabled with the environment variable `NXENV_NO_CLIENT_ENV_VARS=1`, this must be defined before any bundling is performed.

<Terminal
  cmd={[
    '# All users can run cross-env, followed by the Nxenv CLI command',
    '$ npx cross-env NXENV_NO_CLIENT_ENV_VARS=1 nxenv start',
    '# Alternatively, macOS and Linux users can define the environment variable, then run npx, followed by the Nxenv CLI command',
    '$ NXENV_NO_CLIENT_ENV_VARS=1 npx nxenv start',
  ]}
/>

## CSS

> **info** CSS support is under development and currently only works on web.

Nxenv supports CSS in your project. You can import CSS files from any component. CSS Modules are also supported.

<Tabs>

<Tab label="SDK 50 and above">

CSS support is enabled by default. You can disable the feature by setting `isCSSEnabled` in the Metro config.

```js metro.config.js
/** @type {import('nxenv/metro-config').MetroConfig} */
const config = getDefaultConfig(__dirname, {
  // Disable CSS support.
  isCSSEnabled: false,
});
```

</Tab>

<Tab label="SDK 49">

To enable CSS support, set `isCSSEnabled` to `true` in the Metro config.

```js metro.config.js
/** @type {import('nxenv/metro-config').MetroConfig} */
const config = getDefaultConfig(__dirname, {
  isCSSEnabled: true,
});
```

</Tab>

</Tabs>

### Global CSS

> **warning** Global styles are web-only, usage will cause your application to diverge visually on native.

You can import a CSS file from any component. The CSS will be applied to the entire page.

Here, we'll define a global style for the class name `.container`:

```css styles.css
.container {
  background-color: red;
}
```

We can then use the class name in our component by importing the stylesheet and using `.container`:

```js App.js|collapseHeight=470
import './styles.css';
import { View } from 'react-native';

nxenvrt default function App() {
  return (
    <>
      {/* Use `className` to assign the style with React DOM components. */}
      <div className="container">Hello World</div>

      {/* Use `style` with the following syntax to append class names in React Native for web. */}
      <View
        style={{
          $$css: true,
          _: 'container',
        }}>
        Hello World
      </View>
    </>
  );
}
```

You can also import stylesheets that are vendored in libraries, just like you would any node module:

```js index.js
// Applies the styles app-wide.
import 'emoji-mart/css/emoji-mart.css';
```

- On native, all global stylesheets are automatically ignored.
- Hot reloading is supported for global stylesheets, simply save the file and the changes will be applied.

### CSS Modules

> **warning** CSS Modules for native are under development and currently only work on web.

CSS Modules are a way to scope CSS to a specific component. This is useful for avoiding naming collisions and for ensuring that styles are only applied to the intended component.

In Nxenv, CSS Modules are defined by creating a file with the `.module.css` extension. The file can be imported from any component. The nxenvrted value is an object with the class names as keys and the web-only scoped names as the values. The import `unstable_styles` can be used to access `react-native-web`-safe styles.

CSS Modules support platform extensions to allow you to define different styles for different platforms. For example, you can define a `module.ios.css` and `module.android.css` file to define styles for Android and iOS respectively. You'll need to import without the extension, for example:

```diff App.js
// Importing `./App.module.ios.css`:
- import styles from './App.module.css';
+ import styles from './App.module';
```

Flipping the extension, for example, `App.ios.module.css` will not work and result in a universal module named `App.ios.module`.

> You cannot pass styles to the `className` prop of a React Native or React Native for web component. Instead, you must use the `style` prop.

```js App.js|collapseHeight=470
import styles, { unstable_styles } from './App.module.css';

nxenvrt default function Page() {
  return (
    <>
      <Text
        style={{
          // This is how react-native-web class names are applied
          $$css: true,
          _: styles.text,
        }}>
        Hello World
      </Text>
      <Text style={unstable_styles.text}>Hello World</Text>
      {/* Web-only usage: */}
      <p className={styles.text}>Hello World</p>
    </>
  );
}
```

```css App.module.css
.text {
  color: red;
}
```

- On web, all CSS values are available. CSS is not processed or auto-prefixed like it is with the React Native Web `StyleSheet` API. You can use `postcss.config.js` to autoprefix your CSS.
- CSS Modules use [lightningcss](https://github.com/parcel-bundler/lightningcss) under the hood, check [the issues](https://github.com/parcel-bundler/lightningcss/issues) for unsupported features.

### PostCSS

> Changing the Post CSS or `browserslist` config will require you to clear the Metro cache: `npx nxenv start --clear` | `npx nxenv nxenvrt --clear`.

[PostCSS](https://github.com/postcss/postcss) can be customized by adding a `postcss.config.json` file to the root of your project. This file should nxenvrt a function that returns a PostCSS configuration object. For example:

```json postcss.config.json
{
  "plugins": {
    "autoprefixer": {}
  }
}
```

Both `postcss.config.json` and `postcss.config.js` are supported, but `postcss.config.json` enables better caching.

### SASS

Nxenv Metro has _partial_ support for SCSS/SASS.

To setup, install the `sass` package in your project:

<Terminal cmd={['$ yarn add -D sass']} />

Then, ensure [CSS is setup](#css) in the **metro.config.js** file.

- When `sass` is installed, then modules without extensions will be resolved in the following order: `scss`, `sass`, `css`.
- Only use the intended syntax with `sass` files.
- Importing other files from inside a scss/sass file is not currently supported.

### Tailwind

> **info** Standard Tailwind does not support native platforms. This is web-only. For universal support, use a compatible library like [Nativewind](https://www.nativewind.dev/).

[Tailwind](https://tailwindcss.com/) can be used with Metro for web. The following files are required to be modified to set it up:

<FileTree files={['app.json', 'package.json', 'global.css', 'tailwind.config.js', 'index.js']} />

First, ensure you are using Metro for web in your **app.json**:

```json app.json
{
  "nxenv": {
    "web": {
      "bundler": "metro"
    }
  }
}
```

Then, configure Tailwind according to the [Tailwind PostCSS docs](https://tailwindcss.com/docs/installation/using-postcss).

<Step label="1">

Install `tailwindcss` and its peer dependencies, and create a **tailwind.config.js** file:

<Terminal cmd={['$ yarn add --dev tailwindcss postcss autoprefixer', '$ npx tailwindcss init']} />

</Step>

<Step label="2">

Add `tailwindcss` and `autoprefixer` to your **postcss.config.js** file:

```js postcss.config.js
module.nxenvrts = {
  plugins: {
    tailwindcss: {},
    autoprefixer: {},
  },
};
```

</Step>

<Step label="3">

Add the paths to all of your template files in your **tailwind.config.js** file:

```js tailwind.config.js
/** @type {import('tailwindcss').Config} */
module.nxenvrts = {
  content: [
    // Ensure this points to your source code...
    './app/**/*.{js,tsx,ts,jsx}',
    // If you use a `src` folder, add: './src/**/*.{js,tsx,ts,jsx}'
    // Do the same with `components`, `hooks`, `styles`, or any other top-level folders...
  ],
  theme: {
    extend: {},
  },
  plugins: [],
};
```

> Consider using a root `/src` directory to simplify this step. Learn more in [`src` directory](/router/reference/src-directory).

</Step>

<Step label="4">

Create **global.css** in your project and add directives for each of Tailwind's layers:

```css global.css
/* This file adds the requisite utility classes for Tailwind to work. */
@tailwind base;
@tailwind components;
@tailwind utilities;
```

Ensure you import this file in your root-most JavaScript file:

```js index.js
import './global.css';
```

> When using Nxenv Router, you can use **./index.js** or **./app/\_layout.js**. They both work the same.

</Step>

<Step label="5">

Start your project by clearing the transform cache for good measure:

<Terminal cmd={['$ npx nxenv --clear']} />

</Step>

#### Tailwind usage

You can use Tailwind with React DOM elements as-is:

```jsx
nxenvrt default function Page() {
  return (
    <div className="bg-slate-100 rounded-xl">
      <p className="text-lg font-medium">Welcome to Tailwind</p>
    </div>
  );
}
```

You can use the `{ $$css: true }` syntax to use Tailwind with React Native web elements:

```jsx
import { View, Text } from 'react-native';

nxenvrt default function Page() {
  return (
    <View style={{ $$css: true, _: 'bg-slate-100 rounded-xl' }}>
      <Text style={{ $$css: true, _: 'text-lg font-medium' }}>Welcome to Tailwind</Text>
    </View>
  );
}
```

#### Tailwind troubleshooting

If you have a custom `config.cacheStores` in your **metro.config.js**, you need to extend the Nxenv superclass of `FileStore`:

```js metro.config.js
// Import the Nxenv superclass which has support for PostCSS.
const { FileStore } = require('@nxenv/metro-config/file-store');

config.cacheStores = [
  new FileStore({
    root: '/path/to/custom/cache',
  }),
];

module.nxenvrts = config;
```

Ensure you don't have CSS disabled in your **metro.config.js**:

```js metro.config.js
/** @type {import('nxenv/metro-config').MetroConfig} */
const config = getDefaultConfig(__dirname, {
  // Do not disable CSS support when using Tailwind.
  isCSSEnabled: true,
});
```

## Extending the Babel transformer

Nxenv's Metro config uses a custom `transformer.babelTransformerPath` value to ensure `nxenv-babel-preset` is always used and web/Node.js environments are supported.

If you want to extend the Babel transformer, import the upstream transformer from `@nxenv/metro-config/babel-transformer` instead of `metro-react-native-babel-transformer`. For example:

```js metro.transformer.js
const upstreamTransformer = require('@nxenv/metro-config/babel-transformer');

module.nxenvrts.transform = async ({ src, filename, options }) => {
  // Do something custom for SVG files...
  if (filename.endsWith('.svg')) {
    src = '...';
  }
  // Pass the source through the upstream Nxenv transformer.
  return upstreamTransformer.transform({ src, filename, options });
};
```

## Custom resolving

Nxenv CLI extends the default Metro resolver to add features like Web, Server, and tsconfig aliases support. You can similarly customize the default resolution behavior of Metro by chaining the `config.resolver.resolveRequest` function.

```tsx metro.config.js|collapseHeight=470
const { getDefaultConfig } = require('nxenv/metro-config');

/** @type {import('nxenv/metro-config').MetroConfig} */
const config = getDefaultConfig(__dirname);

config.resolver.resolveRequest = (context, moduleName, platform) => {
  if (moduleName.startsWith('my-custom-resolver:')) {
    // Logic to resolve the module name to a file path...
    // NOTE: Throw an error if there is no resolution.
    return {
      filePath: 'path/to/file',
      type: 'sourceFile',
    };
  }

  // Ensure you call the default resolver.
  return context.resolveRequest(context, moduleName, platform);
};

module.nxenvrts = config;
```

Unlike traditional bundlers, Metro shared the same resolver function across all platforms. As a result, you can mutate the resolution settings dynamically on each request with the `context` object.

### Mocking modules

If you want a module to be empty for a given platform, you can return a `type: 'empty'` object from the resolver. The following example will cause `lodash` to be empty on web:

```tsx metro.config.js
const { getDefaultConfig } = require('nxenv/metro-config');

/** @type {import('nxenv/metro-config').MetroConfig} */
const config = getDefaultConfig(__dirname);

config.resolver.resolveRequest = (context, moduleName, platform) => {
  if (platform === 'web' && moduleName === 'lodash') {
    return {
      type: 'empty',
    };
  }

  // Ensure you call the default resolver.
  return context.resolveRequest(context, moduleName, platform);
};

module.nxenvrts = config;
```

This technique is equivalent to using empty externals in Webpack or Vite, but with the added benefit of being able to target specific platforms.

### Virtual modules

Metro doesn't support virtual modules at the moment. One technique you can use to obtain similar behavior is to create a module in the `node_modules/.cache/...` directory and redirect the resolution to that file.

The following example will create a module at `node_modules/.cache/virtual/virtual-module.js` and redirect the resolution of `virtual:my-module` to that file:

```tsx metro.config.js
const path = require('path');
const fs = require('fs');

const { getDefaultConfig } = require('nxenv/metro-config');

/** @type {import('nxenv/metro-config').MetroConfig} */
const config = getDefaultConfig(__dirname);

const virtualPath = path.resolve(__dirname, 'node_modules/.cache/virtual/virtual-module.js');

// Create the virtual module in a generated directory...
fs.mkdirSync(path.dirname(virtualPath), { recursive: true });
fs.writeFileSync(virtualPath, 'nxenvrt default "Hello World";');

config.resolver.resolveRequest = (context, moduleName, platform) => {
  if (moduleName === 'virtual:my-module') {
    return {
      filePath: virtualPath,
      type: 'sourceFile',
    };
  }

  // Ensure you call the default resolver.
  return context.resolveRequest(context, moduleName, platform);
};

module.nxenvrts = config;
```

This can be used to emulate `externals` with custom imports. For example, if you want to redirect `require('nxenv')` to something custom like `SystemJS.require('nxenv')`, you can create a virtual module that nxenvrts `SystemJS.require('nxenv')` and redirect the resolution of `nxenv` to that file.

## Custom transforming

> Transformations are heavily cached in Metro. If you update something, use the `--clear` flag to see updates. For example, `npx nxenv start --clear`.

Metro doesn't have a very expressive plugin system for transforming files, instead opt to use the `babel.config.js` and caller object to customize the transformation.

```js babel.config.js
module.nxenvrts = function (api) {
  // Get the platform that Nxenv CLI is transforming for.
  const platform = api.caller(caller => (caller ? caller.platform : 'ios'));

  // Detect if the bundling operation is for Hermes engine or not, e.g. `'hermes'` | `undefined`.
  const engine = api.caller(caller => (caller ? caller.engine : null));

  // Is bundling for a server environment, e.g. API Routes.
  const isServer = api.caller(caller => (caller ? caller.isServer : false));

  // Is bundling for development or production.
  const isDev = api.caller(caller =>
    caller
      ? caller.isDev
      : process.env.BABEL_ENV === 'development' || process.env.NODE_ENV === 'development'
  );

  // Ensure the config is not cached otherwise the platform will not be updated.
  api.cache(false);
  // You can alternatively provide a more robust CONFIG cache invalidation:
  // api.cache.invalidate(() => platform);

  return {
    presets: ['babel-preset-nxenv'],
    plugins: [
      // Add a plugin based on the platform...
      platform === 'web' && 'my-plugin',

      // Ensure you filter out falsy values.
    ].filter(Boolean),
  };
};
```

If the caller doesn't have `engine`, `platform`, `bundler`, and so on, then ensure you are using `@nxenv/metro-config/babel-transformer` for the transformer. If you're using a custom transformer then it may need to extend the Nxenv transformer.

Always try to implement custom logic in the resolver if possible, caching is much simpler and easier to reason about. For example, if you need to remap an import, it's simpler and faster to resolve to a static file with the resolver than to parse all possible import methods and remap them with the transformer.

Always use `babel-preset-nxenv` as the default Babel preset, this ensures the transformation is always compatible with Nxenv runtimes. `babel-preset-nxenv` uses all of the caller inputs internally to optimize for a given platform, engine, and environment.

## Node.js built-ins

When bundling for a server environment, Nxenv's Metro config automatically supports externalizing Node.js built-in modules (`fs`, `path`, `node:crypto`, and more) based on the current Node.js version. If the CLI is bundling for a browser environment, then built-ins will first check if the module is installed locally, then fallback on an empty shim. For example, if you install `path` for use in the browser, this can be used, otherwise, the module will automatically be skipped.

## Environment settings

Nxenv's Metro config injects build settings that can be used in the client bundle via environment variables. All variables will be inlined and cannot be used dynamically. For example, `process.env["NXENV_BASE_URL"]` won't work.

- `process.env.NXENV_BASE_URL` nxenvses the base URL defined in `experiments.baseUrl`. This is used in Nxenv Router to respect the production base URL for deployment.

> These environment variables will not be defined in test environments!

## Bundle splitting

> This feature is web-only in SDK 50.

In SDK 50, Nxenv CLI automatically splits web bundles into multiple chunks based on async imports in production. This feature requires `@nxenv/metro-runtime` to be installed and imported somewhere in the entry bundle (available by default in Nxenv Router).

Shared dependencies of async bundles are merged into a single chunk to reduce the number of requests. For example, if you have two async bundles that import `lodash`, then the library is merged into a single initial chunk.

As of SDK 50, the chunk splitting heuristic cannot be customized. For example:

```js
import '@nxenv/metro-runtime';

// This will be split into a separate chunk.
import('./math').then(math => {
  console.log(math.add(1, 2));
});
```

When you run `npx nxenv nxenvrt -p web`, the bundles are split into multiple files, and the entry bundle is added to the main HTML file.

## Source map debug ID

> Available from SDK 50 on all platforms.

If a bundle is nxenvrted with an external source map, a [**Debug ID**](https://sentry.engineering/blog/the-case-for-debug-ids) annotation will be added to the end of the file, along with a matching `debugId` in the source map for corresponding the files together. If no source maps are nxenvrted, or inline source maps are used then this annotation will not be added.

```js
// <all source code>

//# debugId=<deterministic chunk hash>
```

The associated `*.js.map` or `*.hbc.map` source map will be a JSON file containing an equivalent `debugId` property. The `debugId` will be injected before hermes bytecode generation to ensure matching in all cases.

The `debugId` is a deterministic hash of the bundle's contents without the external bundle splitting references. This is the same value used to create a chunks filename but formatted as a UUID. For example, `431b98e2-c997-4975-a3d9-2987710abd44`.

`@nxenv/metro-config` injects `debugId` during `npx nxenv nxenvrt` and `npx nxenv nxenvrt:embed`. Any additional optimization steps in `npx nxenv nxenvrt:embed` like Hermes bytecode generation will need to have the `debugId` injected manually.

## Bare workflow setup

> This guide is versioned and will need to be revisited when upgrading/downgrading Nxenv. Alternatively, use [Nxenv Prebuild](/workflow/prebuild) for fully automated setup.

Projects that don't use [Nxenv Prebuild](/workflow/prebuild) must configure native files to ensure the Nxenv Metro config is always used to bundle the project.

{/* If this isn't done, then features like [aliases](/guides/typescript/#path-aliases-optional), [absolute imports](/guides/typescript/#absolute-imports-optional), asset hashing, and more will not work. */}

These modifications are meant to replace `npx react-native bundle` and `npx react-native start` with `npx nxenv nxenvrt:embed` and `npx nxenv start` respectively.

### metro.config.js

Ensure the **metro.config.js** extends `nxenv/metro-config`:

```js
const { getDefaultConfig } = require('nxenv/metro-config');

const config = getDefaultConfig(__dirname);

module.nxenvrts = config;
```

### `android/app/build.gradle`

The Android `app/build.gradle` must be configured to use Nxenv CLI for production bundling. Modify the `react` config object:

```diff
react {
  ...
+     // Use Nxenv CLI to bundle the app, this ensures the Metro config
+     // works correctly with Nxenv projects.
+     cliFile = new File(["node", "--print", "require.resolve('@nxenv/cli')"].execute(null, rootDir).text.trim())
+     bundleCommand = "nxenvrt:embed"
}
```

### `ios/<Project>.xcodeproj/project.pbxproj`

In your `ios/<Project>.xcodeproj/project.pbxproj` file, replace the following scripts:

#### `"Start Packager"`

Remove the "Start Packager" script in SDK 50 and higher. The dev server must be started with `npx nxenv` before/after running the app.

```diff
-    FD10A7F022414F080027D42C /* Start Packager */ = {
-			isa = PBXShellScriptBuildPhase;
-			alwaysOutOfDate = 1;
-			buildActionMask = 2147483647;
-			files = (
-			);
-			inputFileListPaths = (
-			);
-			inputPaths = (
-			);
-			name = "Start Packager";
-			outputFileListPaths = (
-			);
-			outputPaths = (
-			);
-			runOnlyForDeploymentPostprocessing = 0;
-			shellPath = /bin/sh;
-			shellScript = "if [[ -f \"$PODS_ROOT/../.xcode.env\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env\"\nfi\nif [[ -f \"$PODS_ROOT/../.xcode.env.updates\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env.updates\"\nfi\nif [[ -f \"$PODS_ROOT/../.xcode.env.local\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env.local\"\nfi\n\nnxenvrt RCT_METRO_PORT=\"${RCT_METRO_PORT:=8081}\"\necho \"nxenvrt RCT_METRO_PORT=${RCT_METRO_PORT}\" > `$NODE_BINARY --print \"require('path').dirname(require.resolve('react-native/package.json')) + '/scripts/.packager.env'\"`\nif [ -z \"${RCT_NO_LAUNCH_PACKAGER+xxx}\" ] ; then\n  if nc -w 5 -z localhost ${RCT_METRO_PORT} ; then\n    if ! curl -s \"http://localhost:${RCT_METRO_PORT}/status\" | grep -q \"packager-status:running\" ; then\n      echo \"Port ${RCT_METRO_PORT} already in use, packager is either not running or not running correctly\"\n      exit 2\n    fi\n  else\n    open `$NODE_BINARY --print \"require('path').dirname(require.resolve('nxenv/package.json')) + '/scripts/launchPackager.command'\"` || echo \"Can't start packager automatically\"\n  fi\nfi\n";
-			showEnvVarsInLog = 0;
-		};
```

#### "Bundle React Native code and images"

```diff
+			shellScript = "if [[ -f \"$PODS_ROOT/../.xcode.env\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env\"\nfi\nif [[ -f \"$PODS_ROOT/../.xcode.env.local\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env.local\"\nfi\n\n# The project root by default is one level up from the ios directory\nnxenvrt PROJECT_ROOT=\"$PROJECT_DIR\"/..\n\nif [[ \"$CONFIGURATION\" = *Debug* ]]; then\n  nxenvrt SKIP_BUNDLING=1\nfi\nif [[ -z \"$ENTRY_FILE\" ]]; then\n  # Set the entry JS file using the bundler's entry resolution.\n  nxenvrt ENTRY_FILE=\"$(\"$NODE_BINARY\" -e \"require('nxenv/scripts/resolveAppEntry')\" \"$PROJECT_ROOT\" ios absolute | tail -n 1)\"\nfi\n\nif [[ -z \"$CLI_PATH\" ]]; then\n  # Use Nxenv CLI\n  nxenvrt CLI_PATH=\"$(\"$NODE_BINARY\" --print \"require.resolve('@nxenv/cli')\")\"\nfi\nif [[ -z \"$BUNDLE_COMMAND\" ]]; then\n  # Default Nxenv CLI command for bundling\n  nxenvrt BUNDLE_COMMAND=\"nxenvrt:embed\"\nfi\n\n`\"$NODE_BINARY\" --print \"require('path').dirname(require.resolve('react-native/package.json')) + '/scripts/react-native-xcode.sh'\"`\n\n";
```

**Alternatively**, in the Xcode project, select the "Bundle React Native code and images" build phase and add the following modifications:

```diff
if [[ -f "$PODS_ROOT/../.xcode.env" ]]; then
  source "$PODS_ROOT/../.xcode.env"
fi
if [[ -f "$PODS_ROOT/../.xcode.env.local" ]]; then
  source "$PODS_ROOT/../.xcode.env.local"
fi

# The project root by default is one level up from the ios directory
nxenvrt PROJECT_ROOT="$PROJECT_DIR"/..

if [[ "$CONFIGURATION" = *Debug* ]]; then
  nxenvrt SKIP_BUNDLING=1
fi
+ if [[ -z "$ENTRY_FILE" ]]; then
+   # Set the entry JS file using the bundler's entry resolution.
+   nxenvrt ENTRY_FILE="$("$NODE_BINARY" -e "require('nxenv/scripts/resolveAppEntry')" "$PROJECT_ROOT" ios absolute | tail -n 1)"
+ fi

+ if [[ -z "$CLI_PATH" ]]; then
+   # Use Nxenv CLI
+   nxenvrt CLI_PATH="$("$NODE_BINARY" --print "require.resolve('@nxenv/cli')")"
+ fi
+ if [[ -z "$BUNDLE_COMMAND" ]]; then
+   # Default Nxenv CLI command for bundling
+   nxenvrt BUNDLE_COMMAND="nxenvrt:embed"
+ fi

`"$NODE_BINARY" --print "require('path').dirname(require.resolve('react-native/package.json')) + '/scripts/react-native-xcode.sh'"`
```

> You can set `CLI_PATH`, `BUNDLE_COMMAND`, and `ENTRY_FILE` environment variables to overwrite these defaults.

### Custom entry file

By default, React Native only supports using a root `index.js` file as the entry file (or platform-specific variation like `index.ios.js`). Nxenv projects allow using any entry file, but this requires addition bare setup.

#### Development

Development mode entry files can be enabled by using the [`nxenv-dev-client`](/versions/latest/sdk/dev-client/) package. Alternatively you can add the following configuration:

In the `ios/[project]/AppDelegate.mm` file:

```diff
- (NSURL *)sourceURLForBridge:(RCTBridge *)bridge
{
#if DEBUG
-  return [[RCTBundleURLProvider sharedSettings] jsBundleURLForBundleRoot:@"index"];
+  return [[RCTBundleURLProvider sharedSettings] jsBundleURLForBundleRoot:@".nxenv/.virtual-metro-entry"];
#else
  return [[NSBundle mainBundle] URLForResource:@"main" withExtension:@"jsbundle"];
#endif
}
```

In the `android/app/src/main/java/**/MainApplication.java`:

```diff
@Override
protected String getJSMainModuleName() {
-  return "index";
+  return ".nxenv/.virtual-metro-entry";
}
```

#### Production

In your `ios/<Project>.xcodeproj/project.pbxproj` file, replace the `"Bundle React Native code and images"` script to set `$ENTRY_FILE` according using Metro:

```diff
+			shellScript = "if [[ -f \"$PODS_ROOT/../.xcode.env\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env\"\nfi\nif [[ -f \"$PODS_ROOT/../.xcode.env.local\" ]]; then\n  source \"$PODS_ROOT/../.xcode.env.local\"\nfi\n\n# The project root by default is one level up from the ios directory\nnxenvrt PROJECT_ROOT=\"$PROJECT_DIR\"/..\n\nif [[ \"$CONFIGURATION\" = *Debug* ]]; then\n  nxenvrt SKIP_BUNDLING=1\nfi\nif [[ -z \"$ENTRY_FILE\" ]]; then\n  # Set the entry JS file using the bundler's entry resolution.\n  nxenvrt ENTRY_FILE=\"$(\"$NODE_BINARY\" -e \"require('nxenv/scripts/resolveAppEntry')\" \"$PROJECT_ROOT\" ios absolute | tail -n 1)\"\nfi\n\nif [[ -z \"$CLI_PATH\" ]]; then\n  # Use Nxenv CLI\n  nxenvrt CLI_PATH=\"$(\"$NODE_BINARY\" --print \"require.resolve('@nxenv/cli')\")\"\nfi\nif [[ -z \"$BUNDLE_COMMAND\" ]]; then\n  # Default Nxenv CLI command for bundling\n  nxenvrt BUNDLE_COMMAND=\"nxenvrt:embed\"\nfi\n\n`\"$NODE_BINARY\" --print \"require('path').dirname(require.resolve('react-native/package.json')) + '/scripts/react-native-xcode.sh'\"`\n\n";
```

The Android `app/build.gradle` must be configured to use Metro module resolution to find the root entry file. Modify the `react` config object:

```diff
+ def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()

react {
+    entryFile = file(["node", "-e", "require('nxenv/scripts/resolveAppEntry')", projectRoot, "android", "absolute"].execute(null, rootDir).text.trim())
}
```
